Gnome: Fix invisible text in sidebar on backdrop state

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -3970,7 +3970,7 @@ placessidebar.sidebar {
       placessidebar.sidebar row.sidebar-row:selected:hover .sidebar-icon {
         color: #ffffff; }
     placessidebar.sidebar row.sidebar-row:selected:backdrop {
-      color: rgba(46, 52, 64, 0.5); }
+      color: #8e95a4; }
       placessidebar.sidebar row.sidebar-row:selected:backdrop .sidebar-icon {
         -gtk-icon-shadow: none; }
     placessidebar.sidebar row.sidebar-row:selected .sidebar-icon {
